--- a/SDSO12.css
+++ b/SDSO12.css
@@ -43,8 +43,9 @@ header h1 {
 footer {
     background-color: rgb(84, 153, 199);
     color: white;
-    margin-top: 700px;
+    margin-top: 100px;
     border-top: rgb(231, 76, 60) 3px solid;
+    padding: 30px;
     
 }
 header a:hover{
@@ -111,3 +112,17 @@ div.desc {
     opacity: 1.0;
     filter: alpha(opacity=100); 
 }
+.showcase p{
+    text-align:center;
+    padding:50px;
+    width:340px;
+    margin-top: 50px;
+    margin-left: 690px;
+    margin:auto;
+    
+
+    /* Set the border and border image properties */
+    border:30px solid transparent;
+    border-image:url(https://demo.tutorialzine.com/2013/10/css3-features-you-can-finally-use/assets/img/border.png) 30 30 round;
+}
+  
